--- a/Glory-Ranking/Glory-Ranking/Views/EditJsonView.xaml
+++ b/Glory-Ranking/Glory-Ranking/Views/EditJsonView.xaml
@@ -1,15 +1,67 @@
 ﻿<UserControl x:Class="Glory_Ranking.Views.EditJsonView"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-             xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             mc:Ignorable="d" 
-             d:DesignHeight="450" d:DesignWidth="800">
-    <Grid Background="White">
-        <Button x:Name="downloadJsonButton" Content="Download JSON" HorizontalAlignment="Left" Margin="19,128,0,0" VerticalAlignment="Top" Height="59" Width="278" BorderBrush="Black" Click="Button_Click"/>
-        <Button x:Name="uploadJsonButton" Content="Upload JSON" HorizontalAlignment="Left" Margin="19,228,0,0" VerticalAlignment="Top" Height="59" Width="278" BorderBrush="Black" Click="Button_Click"/>
-        <Button x:Name="resetJsonButton" Content="Reset JSON" HorizontalAlignment="Left" Margin="19,328,0,0" VerticalAlignment="Top" Height="59" Width="278" Foreground="Red" BorderBrush="Black" Click="Button_Click"/>
-        <Rectangle HorizontalAlignment="Left" Height="59" Margin="19,38,0,0" Stroke="Black" VerticalAlignment="Top" Width="278"/>
-        <Label Content="Advanced options" HorizontalAlignment="Left" Margin="19,41,0,0" VerticalAlignment="Top" Height="56" Width="278" FontWeight="DemiBold" VerticalContentAlignment="Center" FontSize="25" HorizontalContentAlignment="Center"/>
+             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+             xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+             mc:Ignorable="d"
+             d:DesignHeight="450" d:DesignWidth="800"
+             Background="White">
+
+    <Grid Margin="20">
+        <Grid.RowDefinitions>
+            <RowDefinition Height="Auto"/>
+            <RowDefinition Height="*"/>
+        </Grid.RowDefinitions>
+
+        <!-- HEADER -->
+        <Border BorderBrush="Black"
+                BorderThickness="1"
+                Height="30"
+                VerticalAlignment="Top"
+                Margin="0,0,0,15">
+            <TextBlock Text="Advanced Options"
+                       VerticalAlignment="Center"
+                       HorizontalAlignment="Center"
+                       FontWeight="SemiBold"
+                       FontSize="18"/>
+        </Border>
+
+        <!-- BUTTONS -->
+        <StackPanel Grid.Row="1"
+                    Orientation="Vertical"
+                    VerticalAlignment="Top"
+                    HorizontalAlignment="Left"
+                    Width="250">
+
+            <Button x:Name="downloadJsonButton"
+                    Content="Download JSON"
+                    Height="36"
+                    Background="White"
+                    BorderBrush="Black"
+                    BorderThickness="1"
+                    FontSize="14"
+                    Click="Button_Click"
+                    Margin="0,0,0,8"/>
+
+            <Button x:Name="uploadJsonButton"
+                    Content="Upload JSON"
+                    Height="36"
+                    Background="White"
+                    BorderBrush="Black"
+                    BorderThickness="1"
+                    FontSize="14"
+                    Click="Button_Click"
+                    Margin="0,0,0,8"/>
+
+            <Button x:Name="resetJsonButton"
+                    Content="Reset JSON"
+                    Height="36"
+                    Background="White"
+                    BorderBrush="Black"
+                    BorderThickness="1"
+                    FontSize="14"
+                    Foreground="Red"
+                    Click="Button_Click"/>
+        </StackPanel>
     </Grid>
 </UserControl>
