--- a/Glory-Ranking/Glory-Ranking/MainWindow.xaml
+++ b/Glory-Ranking/Glory-Ranking/MainWindow.xaml
@@ -4,7 +4,7 @@
         xmlns:views="clr-namespace:Glory_Ranking.Views"
         Title="Glory Ranking" Height="400" Width="600" MinHeight="390" MinWidth="580">
     <Grid>
-        <TabControl SelectionChanged="TabControl_SelectionChanged">
+        <TabControl x:Name="mainTabControl" SelectionChanged="TabControl_SelectionChanged">
             <TabItem Header="Leaderboard">
                 <views:LeaderboardView x:Name="LeaderboardTab"/>
             </TabItem>
@@ -18,5 +18,6 @@
                 <views:EditJsonView x:Name="EditJsonTab"/>
             </TabItem>
         </TabControl>
+
     </Grid>
 </Window>
